--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
         "@types/node": "^22.5.5",
         "@types/webpack": "^5.28.5",
         "@types/webpack-dev-server": "^4.7.2",
+        "css-loader": "^7.1.2",
         "css-minimizer-webpack-plugin": "^7.0.0",
+        "html-loader": "^5.1.0",
         "mini-css-extract-plugin": "^2.9.2",
+        "sass-loader": "^16.0.4",
+        "ts-loader": "^9.5.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
         "webpack": "^5.97.1",
         "webpack-cli": "^6.0.1"
     },
     "dependencies": {
-        "css-loader": "^7.1.2",
-        "ts-loader": "^9.5.2"
+        "sass": "^1.83.4"
     }
 }
