Add GitHub Pages deployment workflow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "**/__tests__/*",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
