chore: update dependencies and remove unused type definitions
- Updated @typescript-eslint/eslint-plugin and @typescript-eslint/parser to version 8.44.1.
- Added npm-dts-webpack-plugin as a new dependency.
- Changed typescript version from ^5.1.0 to ~5.4.0.
- Removed unused type definition files for MaButton, MaInput, and utility functions.
- Deleted setupTests.ts and related type definitions, and moved test setup code to a new file.
- Updated webpack configuration to include npm-dts-webpack-plugin for generating type definitions.
- Cleaned up tsconfig.json to exclude test files and unnecessary declarations.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,38 +8,37 @@
     "isolatedModules": true,
     "noEmit": false,
     "jsx": "preserve",
-    
+
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    
-    "declaration": true,
-    "declarationMap": true,
+
+    "declaration": false,
+    "declarationMap": false,
     "sourceMap": true,
-    
+
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
     },
-    
+
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    
+
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src/**/*",
-    "webpack.config.ts"
-  ],
+  "include": ["src/**/*", "webpack.config.ts"],
   "exclude": [
     "node_modules",
     "dist",
-    "**/__tests__/*",
-    "**/*.test.ts",
-    "**/*.test.tsx"
+    "**/__tests__/**/*",
+    "**/*.test.*",
+    "**/*.spec.*",
+    "setupTests.ts",
+    "webpack.config.ts"
   ]
 }
