--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
     "html-webpack-plugin": "^5.5.3",
@@ -42,6 +42,7 @@
     "jest": "^29.6.0",
     "jest-environment-jsdom": "^30.1.2",
     "mini-css-extract-plugin": "^2.7.6",
+    "npm-dts-webpack-plugin": "^1.3.13",
     "rimraf": "^5.0.0",
     "sass": "^1.64.0",
     "sass-loader": "^13.3.2",
@@ -49,7 +50,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.0",
-    "typescript": "^5.1.0",
+    "typescript": "~5.4.0",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
