--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,scss,css,json}\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "prepublishOnly": "npm run clean && npm run build"
@@ -37,16 +39,21 @@
     "@typescript-eslint/parser": "^8.44.1",
     "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^10.1.8",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.0",
     "jest-environment-jsdom": "^30.1.2",
     "mini-css-extract-plugin": "^2.7.6",
     "npm-dts-webpack-plugin": "^1.3.13",
+    "prettier": "^3.6.2",
+    "raw-loader": "^4.0.2",
     "rimraf": "^5.0.0",
     "sass": "^1.64.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "to-string-loader": "^1.2.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.0",
