--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "**/__tests__/**/*",
     "**/*.test.*",
     "**/*.spec.*",
-    "setupTests.ts",
+    "**/setupTests.ts",
     "webpack.config.ts"
   ]
 }
