feat: add component specification template for ma-button
- Introduced a new markdown template for documenting component APIs.
- Updated `ComponentsBase` to remove unnecessary ID generation and enhance attribute handling with validation.
- Created comprehensive tests for `ma-button` covering rendering, attributes, states, events, and accessibility.
- Refactored `ma-button` to use an external HTML template for better structure and maintainability.
- Removed outdated HTML templates and adjusted demo application to reflect new structure.
- Enhanced utility functions and Jest setup for improved testing environment.
- Updated TypeScript and Webpack configurations to support HTML template imports.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,scss,css,json}\"",
     "test": "jest",
     "test:watch": "jest --watch",
+    "generate:mocks": "node scripts/generate-html-mocks.js",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "keywords": [
@@ -33,6 +34,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
