--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@tpl/*.html": ["src/components/*/template.html"]
     },
 
     "experimentalDecorators": true,
