feat: add ma-layout component with header, footer, sider, and content slots
- Implemented the ma-layout component in template.html with slots for header, subheader, sider, content, and footer.
- Added a toggle button for the sidebar with an SVG icon.
- Updated entry.ts to import the new ma-layout component.
- Modified index.html to demonstrate the ma-layout component with a header, sider, content, and footer.
- Enhanced index.ts to manage dynamic content rendering and navigation for the demo application.
- Updated styles in index.scss to support the new layout component and improve overall demo aesthetics.
- Created new HTML templates for getting started, layout demo, and theme customization.
- Added theme customization options and examples in theme.html.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,scss,css,json}\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "npm run generate:mocks && jest",
+    "test:watch": "npm run generate:mocks && jest --watch",
     "generate:mocks": "node scripts/generate-html-mocks.js",
     "prepublishOnly": "npm run clean && npm run build"
   },
